[package]
name = "benchmarks_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
compio = { version = "0.18.0", features = ["macros", "fs"] }
compio-runtime = "0.11.0"
futures = "0.3.31"
futures-lite = "2.6.1"
libc = "0.2.180"
monoio = "0.2.4"
